Fixed layout issues

--- a/src/app/components/stepper/stepper.component.scss
+++ b/src/app/components/stepper/stepper.component.scss
@@ -19,3 +19,8 @@
   justify-content: space-between;
   margin-top: 10px;
 }
+
+.navigation-btn.success-btn {
+  background-color: green;
+  color: white;
+}
